applets/batterymonitor: use smoothed remaining time

which can mitigate the impact of short-time heavy loads on the
estimation.

BUG: 434432

Requires https://invent.kde.org/plasma/powerdevil/-/commit/b55f85ce464be8595df70c903b19534cbe36b7c3